fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -60,6 +60,7 @@
 .author-container .clearfix {
 	margin-top: 30px;
 	display: block;
+	clear: both;
 }
 	
 
